# novel_evaluation

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md
apps/: README.md
apps/api/: README.md  pyproject.toml
apps/api/contracts/: README.md  api-v0-overview.md  job-lifecycle-and-error-semantics.md
apps/api/src/: README.md
apps/api/src/api/: README.md  __init__.py  app.py  dependencies.py  errors.py  routes.py  sqlite_repository.py  upload_parsing.py
apps/api/tests/: conftest.py  test_api.py  test_application.py  test_eval_schemas.py  test_prompt_runtime.py  test_prompt_runtime_security.py  test_prompt_runtime_validation.py  test_provider_adapters.py  test_runtime_persistence.py  test_schemas.py  test_scoring_pipeline.py  test_upload_parsing.py
apps/web/: README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
apps/worker/: README.md  pyproject.toml
apps/worker/src/worker/: __init__.py  bootstrap.py  cli.py  runtime_execution.py
apps/worker/src/worker/commands/: __init__.py  batch.py  eval.py
apps/worker/tests/: conftest.py  test_cli.py
docs/: README.md  architecture.md  contracts.md  prompts-and-evals.md  runbook.md
docs/architecture/: application-layer-boundaries.md  backend-technical-route.md  domain-model.md  evals-framework.md  frontend-app-shell-and-module-boundaries.md  frontend-information-architecture.md  frontend-overview.md  frontend-task-and-state-flow.md  scoring-pipeline.md  (+7 more)
evals/: README.md  __init__.py  builders.py  loaders.py  models.py  writers.py
output/: README.md
prompts/: README.md
scripts/: README.md  common.ps1  run-api.ps1  run-web.ps1  setup.ps1
(+146 files in other folders)
