[project]
name = "api"
version = "0.1.0"
description = "Backend service scaffold for the novel evaluation system"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.128.0,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "openai>=1.109.1,<2.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pytest>=8.4.0,<9.0.0",
    "python-docx>=1.2.0,<2.0.0",
    "python-multipart>=0.0.22,<1.0.0",
    "uvicorn>=0.38.0,<1.0.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
