[project]
name = "worker"
version = "0.1.0"
description = "Standalone worker CLI skeleton for batch and eval flows"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx>=0.28.1,<1.0.0",
    "openai>=1.109.1,<2.0.0",
    "pydantic>=2.12.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
]

[project.scripts]
worker = "worker.cli:entrypoint"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
